LDEV-4054: Updating labels

--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 00:40:22 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 08:59:13 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -517,7 +517,7 @@ authoring.fla.save.dialog.title  =Save sequence
 authoring.fla.open.dialog.title  =Open sequence
 authoring.fla.import.dialog.title  =Import Learning Design
 authoring.fla.import.part.dialog.title  =Import activities
-authoring.fla.run.sequences.folder  =<fmt:message key="label.tab.lesson.sequence.folder" />
+authoring.fla.run.sequences.folder  =Run sequences
 authoring.fla.arrange.confirm  =There are annotations on the canvas.\\n\ They will be not arranged automatically, you will have to adjust them manually later.\\n\ Do you want to continue?
 authoring.fla.clear.canvas.confirm  =You have got unsaved changes. They will be lost. Do you want to continue?
 authoring.fla.branching.start.place.prompt  =Place the branching point
@@ -769,63 +769,5 @@ label.post.anonomously  =Post anonymously
 label.anonymous  =Anonymous
 label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
 
-#====== Templates
-authoring.msg.close.cancel.save=Do you want to close this window without saving?
-authoring.msg.list.cancel.save=Do you want to return to the template list without saving?
-authoring.fla.page.menu.new.template=Use Template
-authoring.template.list.introduction=Select a template from the list to see more details about the design that will be created. You can the proceed to create the design or return back to this list.
-authoring.learning.design.templates=Learning Design Templates
-authoring.template.successful=Your design has been saved as {0}.
-
-authoring.label.sequence.title=Title of Sequence
-authoring.error.sequence.title=Title of Sequence may not be blank
-authoring.error.question.num=Question {0} may not be blank
-authoring.error.question.correct.num=One of the answers for Question {0} needs to be correct.
-authoring.description.application.exercise=Application Exercise (These question(s) will be shown during the analysis phase in the sequence.)
-authoring.label.grouping=Grouping
-authoring.label.grouping.learners.choice=Learner's Choice
-authoring.label.grouping.teachers.choice=Teacher's Choice
-authoring.label.grouping.random.allocation=Random Allocation
-authoring.label.numgroups=Number of groups:
-authoring.error.numgroups=Number of groups must be 1 to 99.
-authoring.label.numlearners=Number of learners:
-authoring.error.numlearners=Number of learners must be 1 to 99.
-authoring.error.group.data=Group settings are not correct.
-authoring.section.lessondetails=Lesson Details
-authoring.section.questions=Questions
-authoring.section.applicationexercise=Application Exercise
-authoring.section.introduction=Introduction
-authoring.create.question=Create Question
-authoring.create.essay.question=Create Essay Question
-authoring.create.mc.question=Create Multiple Choice Question
-authoring.label.application.exercise.num=Application Exercise {0}
-authoring.error.application.exercise.num=Application Exercise {0} may not be blank.
-authoring.label.question.num=Question {0}
-authoring.label.option.num=Option {0}
-authoring.error.option=Option may not be blank
-authoring.label.correct.question=Correct?
-authoring.create.option=Create Option
-button.next=Next
-button.previous=Previous
-button.return.to.template.list=Go back to Template list
-authoring.error.content.id=Content ID is missing
-authoring.error.question.correct.num=One of the answers for Question {0} needs to be correct.
-authoring.error.question.must.have.answer.num=Question {0} must have at least one answer.
-authoring.error.application.exercise.must.have.answer.num=Application Exercise {0} must have at least one answer.
-authoring.error.application.exercise.must.have.100.percent=Application Exercise {0} must have at least one answer worth 100%.
-authoring.error.application.exercise.not.blank.and.grade=Application Exercise {0} may not be blank and must have a grade.
-authoring.label.grade=Grade
-authoring.label.none=None
-
-#=================== Specific to Team Based Learning (TBL) =========================#
-authoring.tbl.template.title=Team Based Learning
-authoring.tbl.template.description=Individual and Team Readiness Assessments followed by Application Exercises.
-authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.
-authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
-
-audit.live.edit.start=Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) started by {3} ({4})
-audit.live.edit.end=Live Edit of Learning Design "{0}" ({1}) for Lesson ({2}) completed by {3} ({4})
-
-label.post.anonomously=Post anonymously
 
 #======= End labels: Exported 762 labels for en AU =====
