--- a/lams_central/conf/language/lams/ApplicationResources_no_NO.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_no_NO.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: no 
 #locale code: NO 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon Apr 02 18:17:20 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 08:59:12 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -763,6 +763,11 @@ authoring.create.criteria  =Opprett kriteria
 audit.design.created  =L\u00e6ringsopplegg "{0}" ({1}) er produsert av {2} ({3})
 authoring.fla.save.successful.check.grouping  =Ditt l\u00e6reingsopplegg  er gyldig og har blitt lagret. Vennligst verifiser om du \u00f8nsker \u00e5 gruppere alle aktivitetene
 authoring.fla.weights.none  =Det er ingen aktiviteter med karakterbok med innhold
+audit.live.edit.start  =Live Edit av Learning Design "{0}" ({1}) for leksjon ({2}) ble startet av {3} ({4})
+audit.live.edit.end  =Live Redigeingr av l\u00e6ringsdesign "{0}" ({1}) for leksjon ({2}) ble fullf\u00f8rt av {3} ({4})
+label.post.anonomously  =Send mail anonymt
+label.anonymous  =Anonym
+label.anonymous.tooltip  =Sl\u00e5 p\u00e5 "Post anonymt" for \u00e5 skjule navnet ditt for andre studentene. Instrukt\u00f8rene vil fortsatt kunne se navnet ditt.
 
 
-#======= End labels: Exported 757 labels for no NO =====
+#======= End labels: Exported 762 labels for no NO =====
