--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:57:47 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:07:11 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -246,7 +246,7 @@ label.authoring.basic.import.questions  =Importar preguntas
 label.authoring.basic.export.questions  =Exportar preguntas
 label.authoring.advance.display.summary  =Mostrar todas las preguntas y respuestas una vez que los estudiantes hayan terminado.
 label.authoring.basic.import.qti  =Importaci\u00f3n IMS QTI
-advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de la evaluaci\u00f3n con las siguientes instrucciones:
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final la evaluaci\u00f3n
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.export.reflection  =Reflexiones
