--- a/lams_tool_chat/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = chat
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:51:42 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:03:04 CST 2018 
  
 #=================== labels for Chat =================# 
 
@@ -64,7 +64,7 @@ error.missingParam  =No se puede continuar. Falta {0}.
 authoring.msg.cancel.save  =\u00bfDesea cerrar sin salvar sus cambios?
 pageTitle.monitoring.chatHistory  =Historial de Chat
 button.try.again  =Refrescar
-advanced.reflectOnActivity  =Agregar Anotador al final del Chat con las siguientes instrucciones:
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 button.reflect  =\u00bfReflexionar en Chat?
 button.continue  =Continuar
 heading.numPosts  =Nro de Mensajes
@@ -80,7 +80,7 @@ monitor.summary.th.advancedSettings  =Opciones Avanzadas
 label.on  =Si
 label.off  =No
 monitor.summary.td.addNotebook  =Agregar notas al terminar el Chat
-monitor.summary.td.notebookInstructions  =Instrucciones para anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 monitor.summary.td.filteredWords  =Palabras a filtrar
 button.conditions  =Condiciones
 label.authoring.heading.conditions  =Condiciones
