--- a/lams_tool_daco/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:54:46 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:05:10 CST 2018 
  
 #=================== labels for Data Collection =================# 
 
@@ -86,7 +86,7 @@ label.authoring.basic.list.header.question  =Pregunta
 label.authoring.basic.required  =Se require la pregunta
 label.authoring.basic.additionaloptions.show  =Mostrar opciones adicionales
 label.authoring.basic.additionaloptions.hide  =Minimizar opciones adicionales
-label.authoring.advanced.reflectOnActivity  =Agregar anotaciones al final de la actividad con las siguientes instrucciones:
+label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.authoring.advanced.record  =Limitar n\u00famero de registros a ingresar
 label.authoring.advanced.record.nolimit  =Sin limite
 label.authoring.advanced.lock.on.finished  =No permitir modificaciones una vez terminado
@@ -157,7 +157,7 @@ label.monitoring.advancedsettings  =Opciones Avanzadas
 label.monitoring.advancedsettings.on  =Si
 label.monitoring.advancedsettings.off  =No
 label.monitoring.advancedsettings.addNotebook  =Agregar anotaci\u00f3n al final de la actividad.
-label.monitoring.advancedsettings.notebookinstructions  =Instrucciones para anotaci\u00f3n
+label.monitoring.advancedsettings.notebookinstructions  =Instrucciones de la reflexi\u00f3n
 label.monitoring.group  =Grupo
 label.monitoring.type  =Tipo
 label.monitoring.title  =T\u00edtulo
