--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:47:27 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:01:30 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -130,7 +130,7 @@ error.less.mini.post  =Debe contribuir con al menos {0} aportaciones antes de fi
 error.must.have.topic  =Debe a\u00f1adir por lo menos un tema cuando la opci\u00f3n de "Permitir a los estudiantes de crear temas" esta desactivada.
 topic.message.attachment.hidden  =Archivo adjunto escondido
 message.posting.limiting  =Limitaci\u00f3n de aportaciones
-advanced.reflectOnActivity  =A\u00f1adir anotaciones al finalizar el foro con las siguientes instrucciones
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 error.reflection.emtpy  =Por favor ingrese su reflexi\u00f3n
 title.reflection  =Reflexi\u00f3n
 label.continue  =Continuar
@@ -158,7 +158,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar el Foro
-monitor.summary.td.notebookInstructions  =Instrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.advanced.notify.mark.release  =Notificar a los estudiantes cuando las calificaciones esten listas
 event.mark.release.subject  =LAMS: Calificaciones listas
 event.mark.release.body  =El profesor ha terminado de calificar las aportaciones del foro.\nSu calificaci\u00f3n es:\n\n{0}\nEste mensaje ha sido enviado automaticamente.
