--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:55:05 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:05:32 CST 2018 
  
 #=================== labels for Google Maps =================# 
 
@@ -91,14 +91,14 @@ button.Continue  =Continuar
 heading.reflection  =Reflexi\u00f3n
 pageTitle.monitoring.notebook  =Ver reflexiones
 message.no.reflection.available  =Sin anotaciones
-monitor.summary.td.addNotebook  =Agregar anotaciones/reflexiones al final
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final de esta actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones para la reflexion
 pageTitle.admin  =Configuracion de Mapas
 admin.formError  =Faltan algunas entradas. Por favor, asegurese que todos los campos necesarios tengan entradas.
 admin.gmapKey  =Google Maps API Key
 admin.success  =Configuraci\u00f3n guardada.
 admin.return  =Retornar a la p\u00e1gina de mantenimiento
-advanced.reflectOnActivity  =Agregar reflexi\u00f3n al final de la actividad con las siguientes instrucciones:
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 button.continue  =Continuar
 button.placeMarker  =Fijar posici\u00f3n
 label.nogroups  =No hay grupos en esta actividad.
@@ -107,7 +107,7 @@ label.activity.completion  =Al finalizar actividad
 label.show.on.map  =Mostrar en mapa
 label.search  =Buscar...
 monitoring.user.fullname  =Nombre
-monitoring.user.reflection  =Anotaci\u00f3n
+monitoring.user.reflection  =Reflexi\u00f3n
 
 
 #======= End labels: Exported 102 labels for es ES =====
