--- a/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:56:23 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:06:36 CST 2018 
  
 #=================== labels for Image Gallery =================# 
 
@@ -26,7 +26,7 @@ label.authoring.basic.upload.single.image  =Subir una sola im\u00e1gen
 label.authoring.basic.image.list  =Lista de im\u00e1genes
 label.authoring.basic.resource.edit  =Editar
 label.authoring.basic.resource.delete  =Borrar
-label.authoring.advanced.reflectOnActivity  =Agregar reflexi\u00f3n al final de la actividad con las siguientes instrucciones:
+label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.authoring.basic.resource.title.input  =T\u00edtulo
 label.authoring.basic.resource.file.input  =Archivo
 label.authoring.basic.resource.files.input  =Archivos
@@ -119,7 +119,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Otras opciones
 monitor.summary.td.addNotebook  =Agregar reflexi\u00f3n al final de actividada
-monitor.summary.td.notebookInstructions  =Intrucciones reflexi\u00f3n
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 admin.page.title  =Configuraci\u00f3n de Galer\u00eda de Im\u00e1genes
 error.required.fields.missing  =Hay valores faltantes. Por favor, asegurese que todos los campos han sido ingresados.
 error.entered.values.not.integers  =Los valores deben ser n\u00fameros enteros
