--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = imscc
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:58:42 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:08:19 CST 2018 
  
 #=================== labels for IMS Common Cartridge =================# 
 
@@ -52,7 +52,7 @@ error.resource.item.invalid.url  =Formato de URL no v\u00e1lida.
 error.resource.item.title.blank  =El t\u00edtulo no puede estar en blanco.
 error.resource.item.url.blank  =La URL no puede estar en blanco.
 error.upload.failed  =Subir archivo error: {0}
-label.authoring.advanced.reflectOnActivity  =A\u00f1adir al final de la actividad una reflexi\u00f3n con las siguientes instrucciones:
+label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
 label.authoring.advance.mini.number.resources.view  =N\u00famero m\u00ednimo de recursos para ver
 label.authoring.advance.run.content.auto  =Ejecutar el contenido de forma autom\u00e1tica (s\u00f3lo est\u00e1 disponible si hay exactamente un recurso)
@@ -118,7 +118,7 @@ monitoring.tab.statistics  =Estad\u00edsticas
 monitoring.tab.summary  =Resumen
 monitoring.user.fullname  =Nombre
 monitoring.user.reflection  =Reflexi\u00f3n
-monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final de esta actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 monitor.summary.th.advancedSettings  =Configuraci\u00f3n avanzada
 open.in.new.window  =Abrir URL en un pop-up
