--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:48:43 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:01:45 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -104,7 +104,7 @@ label.authoring.instructions.col  =Instrucciones:
 label.candidateAnswer  =Opci\u00f3n
 label.total  =Total
 label.continue  =Continuar
-label.reflect  =A\u00f1ada Anotaciones al finalizar MCQ con las siguientes instrucciones:
+label.reflect  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.notebook.entries  =Reflexiones de Estudiantes
 label.reflection  =Reflexi\u00f3n
 label.view.reflection  =Ver Reflexi\u00f3n
@@ -156,7 +156,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar Opci\u00f3n M\u00faltiple
-monitor.summary.td.notebookInstructions  =Intrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 error.pedagogical.planner.empty.answer.selected  =En pregunta {0} la respuesta correcta no se puede dejar en blanco.
 monitor.summary.date.restriction  =Restricci\u00f3n por fecha
 monitor.summary.when.date.restriction.is.set  =Si se determina una restrici\u00f3n por fecha, los estudiantes no podr\u00e1n responder preguntas despu\u00e9s de la misma.
