--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:49:33 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:02:27 CST 2018 
  
 #=================== labels for Q&A =================# 
 
@@ -96,7 +96,7 @@ label.refresh  =Actualizar
 label.tooltip.edit  =Editar esta respuesta
 label.tooltip.tick  =Guardar cambios
 label.continue  =Continuar
-label.reflect  =A\u00f1ada Anotaciones al final de Q&A (Preguntas y Respuestas) con las siguientes instrucciones:
+label.reflect  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.responses.locked  =Atenci\u00f3n: despu\u00e9s presionar el bot\u00f3n de "Ver todas las respuestas", no podr\u00e1 reeditar su respuesta.
 label.notebook.entries  =Entradas a Reflexi\u00f3n
 label.reflection  =Reflexi\u00f3n
@@ -130,7 +130,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar Preguntas
-monitor.summary.td.notebookInstructions  =Intrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.conditions  =Condiciones
 label.authoring.conditions.add.condition  =Agregar Condici\u00f3n
 label.authoring.conditions.list.title  =Condiciones
