--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:58:13 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:07:27 CST 2018 
  
 #=================== labels for Mindmap =================# 
 
@@ -51,7 +51,7 @@ label.cancel  =Cancelar
 label.created  =Creado
 label.lastModified  =Modificado por \u00faltima vez
 label.notebookEntry  =Reflexi\u00f3n
-label.notebookInstructions  =Instrucciones para anotador
+label.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.mindmapEntry  =LLuvia de ideas
 authoring.msg.cancel.save  =\u00bfQuieres cerrar la ventana sin guardar?
 button.try.again  =Intente nuevamente
