--- a/lams_tool_nb/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_nb/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = noticeboard
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:49:08 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:02:06 CST 2018 
  
 #=================== labels for Noticeboard =================# 
 
@@ -38,7 +38,7 @@ error.missingParam  =No puede continuar: {0} no se ha encontrado
 error.exception.NbApplication  =Ha ocurrido un error interno en la Cartelera. Por favor reporte el siguiente problema: {0}
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
 button.try.again  =Refrescar
-advanced.reflectOnActivity  =A\u00f1adir anotaci\u00f3n al final de esta actividad con las siguientes instrucciones:
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 button.continue  =Continuar
 titleHeading.reflections  =Reflexiones
 titleHeading.reflection  =Reflexion
@@ -50,7 +50,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar Cartelera
-monitor.summary.td.notebookInstructions  =Instrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.heading  =Cartelera Edici\u00f3n
 button.submit  =Finalizar
 message.no.reflection.available  =No hay reflexi\u00f3n disponible.
