--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:52:34 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:03:38 CST 2018 
  
 #=================== labels for Notebook =================# 
 
@@ -42,7 +42,7 @@ message.summary  =No hay resumen disponible
 label.view  =Ver
 label.notAvailable  =No esta disponible
 heading.learner  =Estudiante
-heading.notebookEntry  =Anotaci\u00f3n
+heading.notebookEntry  =Reflexi\u00f3n
 button.cancel  =Cancelar
 button.ok  =OK
 button.done  =Listo
