--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = pixlr
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:56:06 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:06:21 CST 2018 
  
 #=================== labels for Pixlr Tool =================# 
 
@@ -50,7 +50,7 @@ label.save  =Guardar
 label.cancel  =Cancelar
 label.created  =Creado
 label.lastModified  =\u00daltima modificacion
-label.notebookEntry  =Anotaci\u00f3n
+label.notebookEntry  =Reflexi\u00f3n
 button.try.again  =Intentar nuevamente
 button.finish  =Finalizar
 message.alertContentEdit  =Advertencia: uno o mas estudiantes ya han accedido a esta actividad. Cambiar el contenido de la misma resultar\u00e1 en que estudiantes reciban distinta informaci\u00f3n.
@@ -70,7 +70,7 @@ error.file.upload.failed  =Ha ocurrido un error al subir su im\u00e1gen. Asegure
 label.authoring.remove  =Remover
 learner.edit.image  =Editar esta im\u00e1gen
 tooltip.openfullsize  =Pulse aqui para abrir en tama\u00f1o original
-advanced.reflectOnActivity  =Agregar reflexi\u00f3n al final de la actividad con las siguientes instrucciones:
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 button.continue  =Continuar
 button.edit  =Editar
 button.viewAll  =Ver las imagenes de otros estudiantes
@@ -87,7 +87,7 @@ monitoring.th.reflection  =Reflexi\u00f3n
 monitoring.hideImage  =Esconder las imagenes de otros estudiantes
 monitoring.showImage  =Mostrar las imagenes de otros estudiantes
 message.imageHidden  =Im\u00e1gen ocultada por el instrucctor
-monitor.summary.td.notebookInstructions  =Instrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 title.sessions  =Sessiones
 title.originalImage  =Im\u00e1gen original
 message.imageNotAvailable  =Im\u00e1gen no disponible. Puede ser que no se haya editado todav\u00eda o que haya sido borrada
