--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:50:32 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:02:44 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -84,7 +84,7 @@ label.count  =Cantidad
 label.no.user.available  =No hay usuarios disponibles
 msg.mark.released  =Los resultados de {0} han sido publicados.
 error.title.blank  =El t\u00edtulo no puede estar vacio
-label.authoring.advanced.reflectOnActivity  =A\u00f1adir Anotaciones al finalizar Enviar Archivos con las siguientes instrucciones:
+label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 error.reflection.emtpy  =Ingrese reflexi\u00f3n
 title.reflection  =Reflexi\u00f3n
 label.continue  =Continuar
@@ -111,7 +111,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar Envio de Archivos
-monitor.summary.td.notebookInstructions  =Intrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.advanced.notify.mark.release  =Notifique a los estudiantes cuando las calificaciones esten listas
 event.mark.release.subject  =LAMS: Calificaciones listas
 event.mark.release.body  =El profesor a terminado de otorgar calificaciones a su archivo(s). \nSu calificaci\u00f3n es: \n\n{0}\n Este mensaje ha sido enviado autom\u00e1ticamente, no necesita responderlo.
