--- a/lams_tool_scratchie/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_scratchie/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = scratchie
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 05:01:37 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:00:34 CST 2018 
  
 #=================== labels for Scratchie =================# 
 
@@ -50,7 +50,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Configuraciones
 monitor.summary.td.addNotebook  =A\u00f1adir anotaciones
-monitor.summary.td.notebookInstructions  =Instrucciones
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.up  =Subir
 label.monitoring.summary.select.student  =Seleccionar estudiante para ver intentos y resultados
 label.monitoring.summary.user.name  =Nombre
