--- a/lams_tool_scribe/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_scribe/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = scribe
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:53:30 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:04:34 CST 2018 
  
 #=================== labels for Scribe =================# 
 
@@ -21,7 +21,7 @@ label.authoring.basic.instructions  =Instrucciones:
 label.authoring.basic.heading  =Cabeceras
 label.authoring.basic.heading.add  =Crear encabezado
 advanced.lockOnFinished  =No permitir modificaciones una vez terminado
-advanced.reflectOnActivity  =A\u00f1adir Anotaciones al final de Escriba con las siguientes instrucciones:
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 advanced.selectScribe  =Seleccionar Escriba
 advanced.firstLearner  =Primer estudiante en llegar a la actividad toma el rol de Escriba
 advanced.selectInMonitor  =Seleccionar desde Seguimiento
@@ -87,7 +87,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar Escriba
-monitor.summary.td.notebookInstructions  =Intrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 message.waitForScribe  =Por favor espere a que el instructor elija al escriba.
 button.submitActivity  =Finalizar
 button.select  =Seleccionar
