--- a/lams_tool_survey/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:53:09 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:04:04 CST 2018 
  
 #=================== labels for Survey =================# 
 
@@ -98,7 +98,7 @@ button.try.again  =Intentar nuevamente
 label.up  =Mover hacia arriba
 label.down  =Mover hacia abajo
 label.monitoring.heading.access  =Estudiantes
-label.authoring.advanced.reflectOnActivity  =Reflexionar sobre la encuesta
+label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 error.reflection.emtpy  =Inserte su reflexi\u00f3n
 title.reflection  =Reflexi\u00f3n
 label.continue  =Continuar
@@ -135,7 +135,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar la encuesta
-monitor.summary.td.notebookInstructions  =Instrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.advanced.notify.onanswersubmit  =Notificar a los tutores cuando el estudiante envie respuestas
 event.answer.submit.subject  =LAMS: nueva respuesta a la encuesta
 event.answer.submit.body  =El estudiante {0} ha contestado la encuesta. \n\nEste mensaje ha sido enviado autom\u00e1ticamente.
