--- a/lams_tool_task/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = takslist
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:54:11 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:04:50 CST 2018 
  
 #=================== labels for Task List =================# 
 
@@ -44,7 +44,7 @@ label.authoring.choosefile.button  =Elejir archivo
 label.authoring.advance.allow.contribute.tasks  =\u00bfPueden los estudiantes contribuir tareas?
 label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
 label.authoring.advance.monitor.verification.required  =El tutor(es) deben verificar que las tareas se hayan realizado para que los estudiantes puedan continuar
-label.authoring.advanced.reflectOnActivity  =Agregar Anotador al final de la Lista de Tareas con las siguientes instrucciones:
+label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.authoring.advance.run.content.sequentialOrder  =Las tareas deben finalizarse de manera secuencial
 label.authoring.advance.minimum.number.tasks  =N\u00famero m\u00ednimo de tareas a realizar
 label.authoring.cancel.button  =Cancelar
