--- a/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = voting
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:52:03 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:03:23 CST 2018 
  
 #=================== labels for Voting =================# 
 
@@ -99,7 +99,7 @@ label.tip.displayPieChart  =Mostrar gr\u00e1fica de torta
 label.tip.displayBarChart  =Mostrar gr\u00e1fica de barras
 label.refresh  =Actualizar
 label.continue  =Continuar
-label.reflect  =A\u00f1ada Anotaciones al finalizar Votaci\u00f3n con las siguientes instrucciones:
+label.reflect  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.notebook.entries  =Reflexiones de Estudiantes
 label.reflection  =Reflexi\u00f3n
 label.learner  =Estudiante
@@ -129,7 +129,7 @@ label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.summary.td.addNotebook  =Agregar anotador al finalizar Votaci\u00f3n
-monitor.summary.td.notebookInstructions  =Instrucciones del anotador
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.learner.nomination  =Su nominaci\u00f3n es:
 error.minNominationCount.not.reached  =No ha seleccionado las nominaciones suficientes. Debe seleccionar por lo menos
 label.minNomCount  =Votos m\u00ednimos
