--- a/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = wiki
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:55:45 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:05:52 CST 2018 
  
 #=================== labels for Wiki =================# 
 
@@ -26,7 +26,7 @@ advanced.allowLearnerCreatePages  =Permitir a los estudiantes crear p\u00e1ginas
 advanced.allowLearnerInsertLinks  =Los estudiantes pueden insertar enlaces a contenido externo
 advanced.allowLearnerAttachImages  =Los estudiantes pueden adjuntar im\u00e1genes
 advanced.notifyChange  =Enviar notificacion a  los tutores cada vez que el wiki sea modificado
-advanced.reflectOnActivity  =A\u00f1adir anotaci\u00f3n al final del wiki con las siguientes instrucciones:
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 message.no.reflection.available  =No hay anotaci\u00f3n dispo
 advanced.editingLimits  =Editar limites
 advanced.editingLimits.prompt  =N\u00famero de veces que un estudiante puede editar el wiki
@@ -114,8 +114,8 @@ label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.th.sessions  =Sessiones
 monitor.th.numlearners  =N\u00famero de estudiantes
-monitor.summary.td.addNotebook  =A\u00f1adir anotaci\u00f3n al finalizar
-monitor.summary.td.notebookInstructions  =Instrucciones para anotaci\u00f3n
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final de esta actividad.
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 monitor.nosessions  =Todavia no hay seciones para este Wiki.
 monitor.notebooks  =Anotaciones
 output.desc.number.of.edits  =N\u00famero de ediciones
